# base

./: BUILD.bazel  MODULE.bazel  base_maven_deps.json
src/main/java/com/company/greeter/: Greeter.java
src/test/java/com/company/greeter/: GreeterTest.java
